--- a/.github/workflows/robot-ci.yml
+++ b/.github/workflows/robot-ci.yml
@@ -5,11 +5,11 @@ on: push
 jobs:
   run_test:
     runs-on: ubuntu-latest
-    name: Run Robot Framework Tests
+    name: Setup Python and Run Tests
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Robot Framework
-        uses: joonvena/robotframework-docker-action@v1.0
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          robot_tests_dir: 'tests'
+          python-version: '3.9'
+      - run: pip install -r requirements.txt
+      - run: robot -d reports/ tests/*.robot
