--- a/.github/workflows/robot-ci.yml
+++ b/.github/workflows/robot-ci.yml
@@ -7,18 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Setup Python and Run Tests
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Execute tests
-        uses: joonvena/robotframework-docker-action@v0.1
-        env:
-          BROWSER: chrome
-          ROBOT_TESTS_DIR: ${{ github.workspace }}/tests
-          ROBOT_REPORTS_DIR: ${{ github.workspace }}/reports
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: reports
-          path: ${{ github.workspace }}/reports
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Robot Framework
+        uses: joonvena/robotframework-docker-action@v1.0
