--- a/.github/workflows/robot-ci.yml
+++ b/.github/workflows/robot-ci.yml
@@ -8,6 +8,8 @@ jobs:
     name: Setup Python and Run Tests
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Robot Framework
         uses: joonvena/robotframework-docker-action@v1.0
+        with:
+          robot_tests_dir: 'tests'
