--- a/.github/workflows/robot-ci.yml
+++ b/.github/workflows/robot-ci.yml
@@ -1,15 +1,24 @@
-name: Robot Framework CI
+name: Running Terratest and Deploy Report Github Pages
 
 on: push
 
 jobs:
-  test:
+  run_test:
     runs-on: ubuntu-latest
     name: Setup Python and Run Tests
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Robot Framework
-        uses: joonvena/robotframework-docker-action@v1.0
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          robot_tests_dir: 'tests'
+          python-version: '3.9'
+      - run: pip install -r requirements.txt
+      - uses: nanasess/setup-chromedriver@v2
+        with:
+          chromedriver-version: '121.0.6167.85'
+      - run: |
+          export DISPLAY=:99
+          chromedriver --url-base=/wd/hub &
+          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
+
+        name: Running Robot
+      - run: robot -d reports/ tests/*.robot
