--- a/.github/workflows/robot-ci.yml
+++ b/.github/workflows/robot-ci.yml
@@ -1,18 +1,25 @@
-name: Running Terratest and Deploy Report Github Pages
+name: Robot Framework CI
 
 on: push
 
 jobs:
-  run_test:
+  test:
     runs-on: ubuntu-latest
     name: Setup Python and Run Tests
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python v3.9
+        uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-      - run: pip install -r requirements.txt
-      - uses: nanasess/setup-chromedriver@v2
+
+      - name:  Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Setup Chromedriver v121
+        uses: nanasess/setup-chromedriver@v2
         with:
           chromedriver-version: '121.0.6167.85'
       - run: |
@@ -20,5 +27,23 @@ jobs:
           chromedriver --url-base=/wd/hub &
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
-        name: Running Robot
-      - run: robot -d reports/ tests/*.robot
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './reports/'
+
+  deploy:
+    needs: test
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
