--- a/.github/workflows/robot-ci.yml
+++ b/.github/workflows/robot-ci.yml
@@ -28,7 +28,7 @@ jobs:
           sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
 
       - name: Running Robot
-        run: robot -d reports/ tests/*.robot
+        run: robot -d reports/ -r index.html tests/*.robot
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
